--- a/pysesa.pysesa.html
+++ b/pysesa.pysesa.html
@@ -197,7 +197,8 @@
 <p>m1 = first moment of spectrum</p>
 <p>m2 = second moment of spectrum</p>
 <p>m3 = third moment of spectrum</p>
-<p class="last">m4 = fourth moment of spectrum</p>
+<p>m4 = fourth moment of spectrum</p>
+<p class="last">phi = effective slope (degrees)</p>
 </dd>
 </dl>
 </div></blockquote>
@@ -259,7 +260,8 @@
 <p>m1 = first moment of spectrum</p>
 <p>m2 = second moment of spectrum</p>
 <p>m3 = third moment of spectrum</p>
-<p class="last">m4 = fourth moment of spectrum</p>
+<p>m4 = fourth moment of spectrum</p>
+<p class="last">phi = effective slope (degrees)</p>
 </dd>
 </dl>
 </div></blockquote>
