--- a/pysesa.test.html
+++ b/pysesa.test.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="pysesa 0.0.1 documentation" href="index.html" />
     <link rel="up" title="pysesa package" href="pysesa.html" />
+    <link rel="next" title="Examples" href="examples.html" />
     <link rel="prev" title="pysesa.write module" href="pysesa.write.html" /> 
   </head>
   <body role="document">
@@ -40,6 +41,9 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="examples.html" title="Examples"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="pysesa.write.html" title="pysesa.write module"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">home</a>|&nbsp;</li>
@@ -54,6 +58,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="pysesa.write.html"
                         title="previous chapter">pysesa.write module</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="examples.html"
+                        title="next chapter">Examples</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -122,6 +129,9 @@ minpts = 16 # min pts per window</p>
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="examples.html" title="Examples"
+             >next</a> |</li>
         <li class="right" >
           <a href="pysesa.write.html" title="pysesa.write module"
              >previous</a> |</li>
